--- a/action-rest/pom.xml
+++ b/action-rest/pom.xml
@@ -11,6 +11,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>action-rest</artifactId>
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
