--- a/runner/pom.xml
+++ b/runner/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>action</artifactId>
-        <groupId>tomasz.click</groupId>
+        <groupId>click.tomasz</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,13 +13,14 @@
 
     <properties>
         <tomcat.version>8.0.28</tomcat.version>
+        <h2.version>1.4.182</h2.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>tomasz.click</groupId>
-            <artifactId>action-rest</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
