--- a/action-rest/pom.xml
+++ b/action-rest/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>actions</artifactId>
-        <groupId>tomasz.click</groupId>
+        <artifactId>action</artifactId>
+        <groupId>click.tomasz</groupId>
         <relativePath>../pom.xml</relativePath>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -13,12 +13,19 @@
     <artifactId>action-rest</artifactId>
     <packaging>war</packaging>
 
+    <properties>
+        <cxf.version>3.1.5</cxf.version>
+        <slf4j.version>1.7.18</slf4j.version>
+        <spring.version>4.2.5.RELEASE</spring.version>
+        <jackson.version>1.9.13</jackson.version>
+        <javax.ws.rs-api.version>2.0</javax.ws.rs-api.version>
+    </properties>
+
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>click.tomasz</groupId>
+            <artifactId>action-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -95,6 +102,12 @@
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
             <version>2.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
