--- a/bpmn2-model/pom.xml
+++ b/bpmn2-model/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>actions</artifactId>
-        <groupId>tomasz.click</groupId>
+        <artifactId>action</artifactId>
+        <groupId>click.tomasz</groupId>
         <relativePath>../pom.xml</relativePath>
         <version>1.0-SNAPSHOT</version>
     </parent>
